<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settingsToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:contentInsetLeft="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:contentInsetStart="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/settingsBackButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:foreground="?attr/selectableItemBackground"
                android:padding="7dp"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/event_actions_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/roboto_medium"
                android:includeFontPadding="false"
                android:text="@string/settings"
                android:textColor="@color/primaryTextColor"
                android:textSize="17sp" />
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/settingsAd"
        android:layout_below="@+id/settingsToolbar"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_bold"
            android:paddingHorizontal="20dp"
            android:textSize="16sp"
            android:text="@string/app_functionality" />

        <LinearLayout
            android:id="@+id/settingsLanguageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:textSize="16sp"
                android:text="@string/settings_update_language" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:fontFamily="@font/roboto"
                android:text="@string/settings_update_lang_content"
                android:textColor="@color/black" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/settingsTouchNotchLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:layout_toStartOf="@+id/settingsTouchNotchRadioImage"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="16sp"
                    android:text="@string/settings_touch_notch_btn_heading" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:fontFamily="@font/roboto"
                    android:text="@string/settings_touch_notch_btn_content"
                    android:textColor="@color/black" />
            </LinearLayout>

            <ImageView
                android:id="@+id/settingsTouchNotchRadioImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_check_circle"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settingsTouchBarLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:layout_toStartOf="@+id/settingsTouchBarRadioImage"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="16sp"
                    android:text="@string/settings_touch_bar_btn_heading" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:fontFamily="@font/roboto"
                    android:text="@string/settings_touch_bar_btn_content"
                    android:textColor="@color/black" />
            </LinearLayout>

            <ImageView
                android:id="@+id/settingsTouchBarRadioImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_check_circle" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settingsHapticFeedbackLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:textSize="16sp"
                android:layout_toStartOf="@+id/settingsHapticFeedbackCheckBox"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/settings_feedback_content" />

            <CheckBox
                android:id="@+id/settingsHapticFeedbackCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:minWidth="0dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settingsLandscapeOptionLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_toStartOf="@+id/settingsLandscapeOptionCheckBox"
                android:fontFamily="@font/roboto_bold"
                android:layout_centerVertical="true"
                android:textSize="16sp"
                android:text="@string/settings_restrict_landscape_content" />

            <CheckBox
                android:id="@+id/settingsLandscapeOptionCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:minWidth="0dp" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/settingsAd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <com.adsmodule.api.adsModule.interfaces.CustomView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:adType="medium"
            app:strokeColor="@color/transparent"
            app:strokeWidth="1dp" />

    </LinearLayout>

</RelativeLayout>