<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.EventActionsActivity">

    <TextView
        android:id="@+id/button_notch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:background="@color/transparent"
        android:textColor="@color/transparent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/eventActionsToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:contentInsetLeft="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:contentInsetStart="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/eventActionsBackButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:foreground="?attr/selectableItemBackground"
                android:padding="7dp"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/event_actions_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/roboto_medium"
                android:includeFontPadding="false"
                android:textColor="@color/primaryTextColor"
                android:textSize="17sp" />
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_above="@+id/eventActionsAd"
       android:layout_below="@+id/eventActionsToolbar">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:paddingHorizontal="20dp"
           android:paddingTop="10dp">

           <TextView
               android:id="@+id/eventActionsBtn"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingVertical="20dp"
               android:text="@string/event_actions_action"
               android:textSize="16sp"
               android:textAlignment="center"
               android:foreground="?attr/selectableItemBackground"
               android:fontFamily="@font/roboto_medium"
               android:background="@drawable/curved_bg"
               android:backgroundTint="@color/eventActionColor"
               android:textColor="@color/white"/>

           <TextView
               android:id="@+id/eventAccessBtn"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingVertical="20dp"
               android:text="@string/event_actions_access"
               android:textSize="16sp"
               android:textAlignment="center"
               android:layout_marginTop="20dp"
               android:foreground="?attr/selectableItemBackground"
               android:fontFamily="@font/roboto_medium"
               android:background="@drawable/curved_bg"
               android:backgroundTint="@color/eventAccessColor"
               android:textColor="@color/white"/>

           <TextView
               android:id="@+id/eventModesBtn"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingVertical="20dp"
               android:text="@string/event_actions_modes"
               android:textSize="16sp"
               android:foreground="?attr/selectableItemBackground"
               android:textAlignment="center"
               android:layout_marginTop="20dp"
               android:fontFamily="@font/roboto_medium"
               android:background="@drawable/curved_bg"
               android:backgroundTint="@color/eventModesColor"
               android:textColor="@color/white"/>

           <TextView
               android:id="@+id/eventToolsBtn"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingVertical="20dp"
               android:text="@string/event_actions_tools"
               android:textSize="16sp"
               android:foreground="?attr/selectableItemBackground"
               android:textAlignment="center"
               android:layout_marginTop="20dp"
               android:fontFamily="@font/roboto_medium"
               android:background="@drawable/curved_bg"
               android:backgroundTint="@color/eventToolsColor"
               android:textColor="@color/white"/>

           <TextView
               android:id="@+id/eventCommunicationBtn"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingVertical="20dp"
               android:textSize="16sp"
               android:text="@string/event_actions_communication"
               android:textAlignment="center"
               android:foreground="?attr/selectableItemBackground"
               android:layout_marginTop="20dp"
               android:fontFamily="@font/roboto_medium"
               android:background="@drawable/curved_bg"
               android:backgroundTint="@color/eventCommunicationColor"
               android:textColor="@color/white"/>

           <TextView
               android:id="@+id/eventMediaBtn"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingVertical="20dp"
               android:text="@string/event_actions_media"
               android:textSize="16sp"
               android:textAlignment="center"
               android:foreground="?attr/selectableItemBackground"
               android:layout_marginTop="20dp"
               android:fontFamily="@font/roboto_medium"
               android:background="@drawable/curved_bg"
               android:backgroundTint="@color/eventActionColor"
               android:textColor="@color/white"/>

           <TextView
               android:id="@+id/eventSystemBtn"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingVertical="20dp"
               android:text="@string/event_actions_system"
               android:textSize="16sp"
               android:textAlignment="center"
               android:foreground="?attr/selectableItemBackground"
               android:layout_marginVertical="20dp"
               android:fontFamily="@font/roboto_medium"
               android:background="@drawable/curved_bg"
               android:backgroundTint="@color/eventSystemColor"
               android:textColor="@color/white"/>


       </LinearLayout>

   </ScrollView>

    <LinearLayout
        android:id="@+id/eventActionsAd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <com.adsmodule.api.adsModule.interfaces.CustomView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:adType="medium"
            app:strokeColor="@color/transparent"
            app:strokeWidth="1dp" />

    </LinearLayout>

</RelativeLayout>