<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:padding="10dp">

    <RelativeLayout
        android:id="@+id/exitDialogContentLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:background="@drawable/theme_curved_stroked_bg"
        android:paddingHorizontal="10dp"
        android:paddingVertical="30dp">

        <TextView
            android:id="@+id/exitDialogHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_bold"
            android:includeFontPadding="false"
            android:text="@string/exit_dialog_rate_us"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/exit_rate_lay"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/exitDialogHeading"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_stars" />

        <com.adsmodule.api.adsModule.views.NativeView
            android:id="@+id/exitAd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:borderColor="@color/themeColor"
            app:strokeColor="@color/ad_stroke_color"
            app:strokeWidth="1dp"
            app:cardCornerRadius="5dp"
            app:adType="SMALL"
            android:layout_below="@+id/exit_rate_lay"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="20dp" />

        <TextView
            android:id="@+id/exitDialogContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/exitAd"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/roboto_bold"
            android:includeFontPadding="false"
            android:paddingHorizontal="20dp"
            android:text="@string/exit_dialog_content"
            android:textAlignment="center"
            android:textColor="@color/black80" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/exitDialogContent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/exitDialogCancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/theme_curved_stroked_bg"
                android:fontFamily="@font/roboto_bold"
                android:includeFontPadding="false"
                android:paddingVertical="10dp"
                android:text="@string/exit_dialog_go_back"
                android:textAlignment="center"
                android:textColor="@color/themeColor" />

            <TextView
                android:id="@+id/exitDialogProceedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/curved_border"
                android:backgroundTint="@color/themeColor"
                android:fontFamily="@font/roboto_bold"
                android:includeFontPadding="false"
                android:paddingVertical="10dp"
                android:text="@string/exit_dialog_exit"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>